--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,19 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:onClick="upload"
+        android:width="120dp"
+        android:height="50dp"
+        android:gravity="center"
+        android:textSize="22sp"
+        android:background="@drawable/ai_bg"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="上传照片"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
